CiviReport: Fix various style and layout issues.
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2@22142 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1204,7 +1204,10 @@ commented since it is overwiting simple td
    background-color : #F5F5F5; 
    border           : none;
    margin           : 0em 0em 0em 0.1em;
-   //width            : 100%;
+}
+
+#crm-container table.criteria-group {
+    border-bottom: 3px solid #DCDCDC;
 }
 
 #crm-container .reports-header {
@@ -1241,6 +1244,15 @@ commented since it is overwiting simple td
 
 #crm-container table.report-layout tr {
    font-size        : 0.95em; 
+}
+
+#crm-container table.report-layout tr.group-row {
+    font-size        : 1.1em;
+}
+
+#crm-container table.report-layout tr.total-row {
+   font-size        : 1em;
+   border-top       : 2px groove #DCDCDC;
 }
 
 #crm-container .report-label {
