--- a/css/print.css
+++ b/css/print.css
@@ -10,12 +10,17 @@
 #crm-container {   
     overflow: visible !important;
 }
+
 /* CSS for Print and PDF of Reports */
 #crm-container .report-layout {
     border           : 1px groove #DDDDDD;
     width            : 100%;
-    font-family      : sans-serif;	
     border-collapse  : collapse;
+    font-family      : sans-serif;	
+}
+
+#crm-container .criterial-group {
+    border-bottom: 2px solid #DCDCDC;
 }
 
 #crm-container .reports-header-right {
@@ -44,7 +49,16 @@
 }
 
 #crm-container table.report-layout tr {
-    font-size        : 0.95em; 
+    font-size        : 0.9em; 
+}
+
+#crm-container table.report-layout tr.group-row {
+    font-size        : 1em;
+}
+
+#crm-container table.report-layout tr.total-row {
+   font-size        : 1em;
+   border-top       : 2px groove #DCDCDC;
 }
 
 #crm-container .report-label {
@@ -55,6 +69,8 @@
 #crm-container table.report-layout th {
     padding          : 4px;
     background-color : #DCDCDC;
+    text-align       : left;
+    vertical-align   : top;
 }
 
 #crm-container table.report-layout th.report-contents {
@@ -69,7 +85,7 @@
 #crm-container h1 {
     text-align       : left;
     font-family      : sans-serif;
-    font-size        : 20pt;
+    font-size        : 1.5em;
     font-style       : italic;
     margin           : 0;
 }
